objects/nFUSE__Transaction_Detail__c.object
<CustomObject>
    <description>Details about an Integration Platform Transaction Log</description>
    <fields>
        <fullName>nFUSE__Comments__c</fullName>
        <description>Comments about the Transaction&apos;s state</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>nFUSE__Creation_DateTime__c</fullName>
        <description>This optional field displays the Date and Time of when the vendor record was created.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This optional field displays the Date and Time of when the vendor record was created.</inlineHelpText>
        <label>Creation DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nFUSE__Details__c</fullName>
        <description>Verbose information about the current state of a Transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Verbose information about the current state of a Transaction.</inlineHelpText>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFUSE__Log_Type__c</fullName>
        <description>An optional field used to create categories of logs specific to product implementation.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Log Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Transaction_Log__c</fullName>
        <description>The required master Transaction Log identifier that this detail is associated.</description>
        <inlineHelpText>The required master Transaction Log identifier that this detail is associated.</inlineHelpText>
        <label>Transaction Log</label>
        <referenceTo>nFUSE__Transaction_Log__c</referenceTo>
        <relationshipLabel>Transaction Details</relationshipLabel>
        <relationshipName>Transaction_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nFUSE__Transaction_Status__c</fullName>
        <description>The required in transit status of the Transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The required in transit status of the Transaction.</inlineHelpText>
        <label>Transaction Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Vendor_Status__c</fullName>
        <description>The status of the Transaction from the provider vendor&apos;s perspective.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The status of the Transaction from the provider vendor&apos;s perspective.</inlineHelpText>
        <label>Vendor Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Transaction Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>